迭代5优化：修复P1-6/P1-7/P1-8/P1-10/P1-9/P1-3/P2-1/P2-3问题
1. P1-6: SoftDeleteContext.IGNORE_FLAG 重命名为 ignoreSoftDeleteFlag，符合 Java 命名规范
2. P1-7/P1-8: 增强 where(BiFunction/Function) 安全文档，添加 SQL 注入风险说明和安全编码示例
3. P2-3: SubQuerySpec.multiLike 添加 fields 数组 null 检查
4. P1-10: LambdaUtils 缓存驱逐策略从 FIFO 改为 LRU，提高热数据缓存命中率
5. P1-9: InClauseBuilder 添加超大 IN 子句（>10000）性能警告
6. P1-3: 添加 eqStrict/neStrict 方法，提供明确的 null 处理选择
7. P2-1: LambdaUtils 清理线程初始延迟从 5 分钟缩短为 30 秒

测试结果：592 个单元测试全部通过，Spotless 格式化通过